--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Formel1-Geschichte.de Manager</title>
+    <title>Formel1-Geschichte.de Manager SFA</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       :root {
-        --f1-red: #e10600;
-        --f1-dark: #111111;
-        --f1-black: #000000;
+        --palette-blue: #006de3;
+        --palette-grey: #909392;
+        --palette-light: #151515; /* Jetzt dunkel für Text */
+        --palette-dark: #d9dbd7;  /* Jetzt hell für Hintergrund */
       }
       body {
         margin: 0;
         padding: 0;
-        background-color: var(--f1-black);
-        color: #ffffff;
+        background-color: var(--palette-dark);
+        color: var(--palette-light);
         font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+        overflow-x: hidden;
       }
-      /* Scrollbar Styling */
       ::-webkit-scrollbar { width: 8px; }
-      ::-webkit-scrollbar-track { background: #1a1a1a; }
-      ::-webkit-scrollbar-thumb { background: var(--f1-red); border-radius: 0px; }
-      
-      /* WordPress Embed Support */
+      ::-webkit-scrollbar-track { background: var(--palette-dark); }
+      ::-webkit-scrollbar-thumb { background: var(--palette-blue); }
       #root { width: 100%; min-height: 100vh; display: flex; flex-direction: column; }
     </style>
     <script type="importmap">
@@ -32,7 +30,6 @@
   "imports": {
     "react": "https://esm.sh/react@19.0.0-rc-69d4b800-20241021?dev",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0-rc-69d4b800-20241021/client?dev",
-    "react-dom": "https://esm.sh/react-dom@19.0.0-rc-69d4b800-20241021?dev",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/"
   }
